# trianglelist

./: .env  .gitignore  .pre-commit-config.yaml  CLAUDE.md  COMMIT_WORKFLOW.md  Cargo.toml  ISSUE_STATUS_REPORT_2025-01-09.md  LINT_ANALYSIS_2025-01-08.md  README.md  build.gradle  build.gradle.kts  gradle.properties  settings.gradle  settings.gradle.kts
.circleci/: config.yml
.claude/: settings.local.json  wireless-adb-setup.md
.claude/skills/csv-to-dxf/: skill.md
.claude/skills/dxf-editing/: SKILL.md
.github/workflows/: deploy.yml
.specstory/history/: 2025-04-20_04-36-specstoryのチャット履歴の詳細確認.md  2025-04-20_05-19-ビルド設定の確認とリベース.md  2025-06-23_07-43-コードレビューの依頼.md  2025-06-23_08-38-コードレビューの依頼.md  2025-06-23_09-18-コードレビューの依頼.md  2025-06-23_10-42-コードレビューの依頼.md  2025-06-23_12-16-コードレビューの依頼.md  2025-06-23_13-39-ファイルシェアでcsvが受け渡されない理由.md
TriLib/: build.gradle  build.gradle.kts
app/: build.gradle  build.gradle.kts  google-services.json  lint-baseline.xml
app/src/free/: AndroidManifest.xml
app/src/full/: AndroidManifest.xml
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  sample-native.cpp
app/src/main/cpp/sfc/AtlCom/: AtlCom.vcproj  AtlComUnitTests.cpp  AtlComUnitTests.rc  AtlComUnitTests.vcproj  CoInitialize.cpp  CoInitialize.h  CoInitializeUnitTests.cpp  CoInitializeUnitTests.h  ComUtils.cpp  ComUtils.h  ComUtilsUnitTests.cpp  ComUtilsUnitTests.h  StdAfx.cpp  StdAfx.h  StdAfxUnitTests.cpp  StdAfxUnitTests.h
app/src/main/cpp/sfc/common_lib/: SXFPart21FileC.cpp
app/src/main/cpp/sfc/sample_main/: CMakeLists.txt
app/testDxf/: test.dxf
app/testSfc/: test.sfc
common/: build.gradle.kts
cross-section-ui/: Cargo.toml  index.html
cross-section-ui/.github/workflows/: deploy.yml
cross-section-ui/src/: lib.rs  main.rs
cross-section-ui/static/: styles.css
desktop/: build.gradle.kts
desktop/sample/: sample.dxf  sample_csv_only.dxf  sample_triangles.csv  sample_triangles_triangles.xlsx
desktop/scripts/: cad-cp.ps1  cad-open.ps1  dxf_to_image.py  hot-reload.ps1
doc/: android-terms.md  architecture-terms.md  cicd-terms.md  compose-terms.md  git-terms.md  glossary.md  gradle-terms.md  kotlin-terms.md  project-terms.md  test-terms.md  triangle-continuity-investigation-2025-08-13.md
docs/adr/latest/: 0001-textsize-2path-構造-触らない判断.md  0002-label-placement-当たり判定と3層分離.md  0003-寸法オブジェクト-寸法線透明と2層位置決め.md  (+7 more)
gradle/wrapper/: gradle-wrapper.properties
reports/profile/: profile-2022-09-21-17-28-06.html  profile-2022-09-21-17-29-16.html  profile-2022-09-21-17-30-27.html  profile-2022-09-21-17-38-23.html  profile-2022-09-21-17-57-42.html
rust-core/: Cargo.toml
rust-core/src/: lib.rs  main.rs
rust-dxf/: Cargo.toml
rust-dxf/src/: lib.rs  longitudinal.rs  main.rs
rust-renderer/: Cargo.toml
rust-trilib/: Cargo.toml
scripts/: build_history_db.py
src/: lib.rs
src/csv/: column.rs  mod.rs
triangle-preview-widget/: .gitignore  build.gradle.kts  gradle.properties  settings.gradle.kts
triangle-preview-widget/web/: index.html
trianglelist-web/: Cargo.toml  Trunk.toml  index.html
trianglelist-web/.cargo/: config.toml
trianglelist-web/demo/: overlay-test.html  rotation-test.html
trianglelist-web/src/: app.rs  lib.rs  road_section.rs
trianglelist-web/src/csv/: column.rs  mod.rs  parser.rs
trianglelist-web/src/dxf/: converter.rs  download.rs  mod.rs
trianglelist-web/src/render/: canvas.rs  color.rs  dimension.rs  mod.rs  road_section.rs  text.rs  text_canvas2d.rs
web/: dxf.html  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/scripts/: camera-shot.mjs  sync-icons.mjs  sync-wasm.mjs  verify-edge-tap.sh  xlsx-readback.test.ts
web/src/: build-info.d.ts  dxf-viewer.d.ts  dxf.ts  main.ts  url-safety.ts  wasm-module.d.ts  xlsx-export.ts
web/test/: chain-coverage.test.ts  chain-interactive.test.ts  combo-pair.test.ts  fix-verification.test.ts  kind-toggle.test.ts  url-safety.test.ts
(+452 files in other folders)
