[package]
name = "cross_section_ui"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "cross_section_ui"
path = "src/main.rs"
required-features = ["native"]

[features]
default = []
native = []

[dependencies]
eframe = { version = "0.29", default-features = false, features = ["glow", "default_fonts"] }
dxf = "0.6"
uuid = { version = "1", features = ["v4", "js"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "console",
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlAnchorElement",
    "Blob",
    "BlobPropertyBag",
    "Url",
] }
js-sys = "0.3"
console_error_panic_hook = "0.1"
console_log = "1.0"
log = "0.4"
getrandom = { version = "0.3", features = ["wasm_js"] }

[profile.release]
lto = true
opt-level = "z"
