[package]
name = "trianglelist-web"
version = "0.1.0"
edition = "2021"
authors = ["YuujiKamura"]
description = "Triangle list calculator - Web version with egui"
repository = "https://github.com/YuujiKamura/trianglelist"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

# =============================================================================
# Dependencies
# =============================================================================

[dependencies]
# GUI Framework
eframe = { version = "0.29", default-features = false, features = [
    "accesskit",
    "default_fonts",
    "glow",
    "persistence",
]}
egui = "0.29"
egui_extras = "0.29"

# Logging
log = "0.4"
env_logger = "0.11"

# WebAssembly bindings
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

# Browser APIs
web-sys = { version = "0.3", features = [
    "console",
    "Document",
    "Element",
    "HtmlCanvasElement",
    "Window",
]}
js-sys = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Console error handling for wasm
console_error_panic_hook = "0.1"

# =============================================================================
# Target-specific dependencies
# =============================================================================

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
console_log = "1.0"

# =============================================================================
# Build profile optimization
# =============================================================================

[profile.release]
opt-level = 2
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 2
